--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ rvm:
   - 1.9.3
   - 2.0.0
 gemfile:
-  - gemfiles/rails.2.gemfile
-  - gemfiles/rails.3.gemfile
+  - gemfiles/rails23.gemfile
+  - gemfiles/rails32.gemfile
+  - gemfiles/rails40.gemfile
 bundler_args: --no-deployment
 matrix:
   exclude:
     - rvm: 2.0.0
-      gemfile: gemfiles/rails.2.gemfile
+      gemfile: gemfiles/rails23.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails40.gemfile
