--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
   - ree
   - 1.9.3
   - 2.0.0
+  - 2.1.2
 gemfile:
   - gemfiles/rails23.gemfile
   - gemfiles/rails32.gemfile
@@ -12,6 +13,8 @@ bundler_args: --no-deployment
 matrix:
   exclude:
     - rvm: 2.0.0
+      gemfile: gemfiles/rails23.gemfile
+    - rvm: 2.1.2
       gemfile: gemfiles/rails23.gemfile
     - rvm: ree
       gemfile: gemfiles/rails40.gemfile
