--- a/.travis.yml
+++ b/.travis.yml
@@ -2,24 +2,15 @@ bundler_args: ""
 script: "bundle exec rake spec"
 sudo: false
 rvm:
-  - ree
-  - 1.9.3
-  - 2.0.0
-  - 2.1.2
+  - 2.1.8
+  - 2.2.4
+  - 2.3.1
 gemfile:
-  - gemfiles/rails23.gemfile
-  - gemfiles/rails32.gemfile
-  - gemfiles/rails40.gemfile
-  - gemfiles/rails41.gemfile
-bundler_args: --no-deployment
+  - gemfiles/rails42.gemfile
+  - gemfiles/rails50.gemfile
+branches:
+  only: master
 matrix:
   exclude:
-    - rvm: 2.0.0
-      gemfile: gemfiles/rails23.gemfile
-    - rvm: 2.1.2
-      gemfile: gemfiles/rails23.gemfile
-    - rvm: ree
-      gemfile: gemfiles/rails40.gemfile
-    - rvm: ree
-      gemfile: gemfiles/rails41.gemfile
-
+    - rvm: 2.1.8
+      gemfile: gemfiles/rails50.gemfile
