--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,14 @@ rvm:
 gemfile:
   - gemfiles/rails42.gemfile
   - gemfiles/rails50.gemfile
+  - gemfiles/rails51.gemfile
 branches:
   only: master
 matrix:
   exclude:
     - rvm: 2.1.8
       gemfile: gemfiles/rails50.gemfile
+    - rvm: 2.4.1
+      gemfile: gemfiles/rails50.gemfile
+    - rvm: 2.1.8
+      gemfile: gemfiles/rails51.gemfile
